k8s/netpol/allow_by_label+ns.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-web-frontend
  namespace: app
spec:
  podSelector:
    matchLabels:
      app: backend
  policyTypes:
    - Ingress
  ingress:
    # AND
    - from:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: web
          podSelector:
            matchLabels:
              app: frontend
      ports:
        - protocol: TCP
          port: 8080
    # OR
    # - from:
    #   - namespaceSelector:
    #       matchLabels:
    #         kubernetes.io/metadata.name: web
    #   - podSelector:
    #       matchLabels:
    #         app: frontend
