k8s/netpol/policy.yml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: product
  namespace: wsi
spec:
  podSelector:
    matchLabels:
      app: product
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - {}  # 전체허용
  egress:
    - to:
        - ipBlock:
            cidr: 0.0.0.0/0
            except:  # 위 cidr을 허용하지만, except는 차단함
              - 169.254.0.0/16
      ports:
        - protocol: TCP
          port: 3307
        - protocol: TCP
          port: 80
        - protocol: TCP
          port: 443
